:pencil: Update signature

--- a/signatgure.html
+++ b/signatgure.html
@@ -17,7 +17,7 @@
       <a href="www.quansight.com" target="_blank">
         <img
           src="https://res.cloudinary.com/nezahualcoyotl/image/upload/v1606738416/Small_Logo_zw1rrd.png"
-          style="height: 40px; padding: 20px 0"
+          style="height: 35px; padding: 20px 0"
         />
       </a>
     </div>
@@ -25,23 +25,24 @@
     <div
       style="
         float: left;
-        height: 3em;
+        height: 6em;
         width: 2px;
-        background: #5c2a9d;
+        background: #946bc3;
         margin-left: 1em;
         margin-right: 1em;
-        margin-top: 1em;
+        margin-top: 0em;
+        margin-bottom: 0em;
       "
     ></div>
     <!-- main text content -->
-    <div>
-      <br />
+    <div style="border: none; padding: 2px">
       <span
         style="
           text-align: left;
           color: #131a2d;
+          color: #946bc3;
           font-family: 'lato', sans-serif;
-          font-size: 14pt;
+          font-size: 11pt;
           font-weight: bold;
           letter-spacing: 0.05em;
         "
@@ -53,13 +54,38 @@
         <span
           style="
             font-family: 'lato', sans-serif;
-            font-size: 1em;
+            font-size: 0.8em;
             letter-spacing: 0.05em;
             color: #131a2d;
           "
         >
           Co-director Quansight Labs
+          <br />
         </span>
+        <span
+          style="
+            font-family: 'lato', sans-serif;
+            font-size: 0.8em;
+            letter-spacing: 0.05em;
+            color: #131a2d;
+          "
+        >
+          <br />
+          UK based [GMT] | she/her
+        </span>
+        <span
+          style="
+            font-family: 'lato', sans-serif;
+            font-size: 0.8em;
+            letter-spacing: 0.05em;
+            color: #946bc3;
+            padding-top: 8px;
+          "
+        >
+          <br />
+          <span style="color: #131a2d">email:</span> email[at]domain
+        </span>
+
         <!-- icons -->
         <!-- <span style="font-family: lato; font-size: 1em"></span>
         <br />
